--- a/exo1.html
+++ b/exo1.html
@@ -108,8 +108,7 @@
             </div>
             <span>Utiliser compte gmail</span>
             <input type="text" id="name" placeholder="nom">
-            <input type="email" id="email" placeholder="email">
-            <input type="password" id="password" placeholder="password">
+ç_y_f            <input type="password" id="password" placeholder="password">
             <button onclick="send(event)">Se connecter</button>
         </form>
     </div-->
